language/tests/error/InvalidAssignmentInIfCond.sl
def double(x) {
  return 2 * x;
}

def main() {
  if (double(2) = 4) {
    42;
  }
}
